--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -383,7 +383,7 @@ position: relative;
   justify-content: center;
   color: black;
   display: flex;
-  background-color: #f3f1f2;
+  background-color: var(--md-primary-fg-color);
   padding: 1rem;
   cursor: pointer;
 }
@@ -524,12 +524,6 @@ position: relative;
   margin: 1rem;
 }
 
-@media only screen and (max-width: 1219px) {
-  .md-header__topic {
-    margin: 0;
-  }
-}
-
 @media only screen and (max-width: 800px) {
   .component-flex, .case-studies-container .cases-table {
     flex-wrap: wrap;
@@ -537,8 +531,7 @@ position: relative;
 
   .knative-components-container .text-table .normal-text {
     width: 80%;
-    text-align: center;
-
+    text-align: center; 
   }
 
   .knative-components-container .text-table .normal-text:first-child {
@@ -570,18 +563,26 @@ footer nav.md-footer__inner {
 .md-footer-meta{
   padding: 1em 0;
 }
+
 .md-footer-copyright{
   margin-right: 18px;
 }
+
 @media (max-width: 1024px){
-.md-footer-copyright{
-  margin: auto;
-  text-align: center;
+  .md-header__topic {
+    margin: 0;
+  }
+
+  .md-footer-copyright{
+    margin: auto;
+    text-align: center;
+  }
+
+  .md-social{
+    margin: auto;
+  }
 }
-.md-social{
-  margin: auto;
-}
-}
+
 @media (max-width: 861px) {
   .md-footer-meta{
     flex-direction: column;
@@ -596,6 +597,7 @@ footer nav.md-footer__inner {
     display: block;
     margin-bottom: 0.5rem;
   }
+
   .md-footer__button {
     display: none;
   }
@@ -610,6 +612,7 @@ footer nav.md-footer__inner {
     margin: 2rem;
     flex-wrap: wrap;
   }
+
   .md-footer-copyright a{
     margin: 8px;
   }
@@ -618,10 +621,13 @@ footer nav.md-footer__inner {
     display: flex;
     flex-direction: column;
     order: 1;
-  
   }
 
   .md-social {
     margin-top: 1rem;
+  }
+
+  .pipe{
+    display:none;
   }
 }
